# wxwork-pad

./: .gitattributes  CMakeLists.txt
.github/workflows/: build.yml
java/: WxWorkCallback.java
jni/: main.cpp  zygisk.hpp
module-files/: customize.sh  module.prop
